# mira-game-files

./: .gitignore  Cargo.toml  README.md  codecov.yml
.github/ISSUE_TEMPLATE/: bug-.md  feature.md
.github/workflows/: check-pr-title.yml  coverage.yml  testing.yml
apps/game-client/: Cargo.toml
apps/game-client/src/: main.rs
assets/entities/characters/: 6606.json  6607.json  6608.json  6609.json
assets/ui/: debug.html  player_hud.html
assets/ui/css/: debug.css  player_hud.css
config/: client_general.toml  client_graphics.toml  client_input.toml
crates/game-client-package/: Cargo.toml
crates/game-client-package/src/: client_window.rs  lib.rs  states.rs  sys_info.rs
crates/game-client-package/src/config/: debug_config.rs  mod.rs
crates/game-client-package/src/systems/: camera_system.rs  mod.rs  player_system.rs  world_system.rs
crates/game-client-package/src/ui/: hud.rs  mod.rs
crates/game-shared/: Cargo.toml
crates/game-shared/src/: lib.rs
crates/game-shared/src/config/: debug_config.rs  mod.rs
crates/game-shared/src/models/: mod.rs  player.rs  world.rs
crates/game-shared/src/models/camera/: mod.rs
crates/game-shared/src/models/character/: animation.rs  group.rs  mod.rs  world.rs
crates/game-shared/src/models/http/: account.rs  character.rs  mod.rs  team.rs
crates/game-shared/src/utils/: input_utils.rs  mod.rs
crates/game-testing/: Cargo.toml
crates/game-testing/assets/entities/characters/: 297696309.json  297729630.json  424254035.json  594473504.json  625251708.json
crates/game-testing/src/: lib.rs  test_utils.rs
crates/game-testing/src/client_test/: client_packed_plugin_test.rs  client_window_test.rs  mod.rs  states_test.rs
crates/game-testing/src/client_test/config_test/: debug_config_test.rs  mod.rs
crates/game-testing/src/client_test/config_test/client_config_test/: mod.rs
crates/game-testing/src/module_test/: camera_cursor_test.rs  camera_follow_test.rs  camera_logic_test.rs  character_animation_test.rs  character_occlusion_test.rs  logic_module_test.rs  mod.rs  player_load_test.rs  player_logic_test.rs  player_movement_test.rs  world_module_test.rs
crates/game-testing/src/shared_test/: mod.rs
crates/game-testing/src/shared_test/models_test/: character_animation_model_test.rs  character_world_data_test.rs  mod.rs  player_model_test.rs
crates/game-testing/src/shared_test/utils_test/: input_utils_test.rs  mod.rs
crates/module/logic-module/: Cargo.toml
crates/module/logic-module/src/: lib.rs
crates/module/logic-module/src/camera_logic/: camera_cursor.rs  camera_follow.rs  camera_init.rs  mod.rs
crates/module/logic-module/src/player_logic/: character_animation.rs  character_occlusion.rs  mod.rs  player_load.rs  player_movement.rs  player_to_world.rs
crates/module/world-module/: Cargo.toml
crates/module/world-module/src/: lib.rs
http_examples/: fake_account_from_server.json
