[package]
name = "game-client-package"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.game-shared]
workspace = true

[dependencies.logic-module]
path = "../module/logic-module"

[dependencies.world-module]
path = "../module/world-module"

[dependencies.bevy]
workspace = true
features = [
    "bevy_state",
    "bevy_window"
]

[dependencies.avian3d]
workspace = true
