[package]
name = "game-shared"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.bevy]
workspace = true

[dependencies.bevy_input]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true, features = ["display"] }
