[package]
name = "game-testing"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies.game-shared]
path = "../game-shared"

[dev-dependencies.game-client-package]
path = "../game-client-package"

[dev-dependencies.logic-module]
path = "../module/logic-module"

[dev-dependencies.world-module]
path = "../module/world-module"

[dev-dependencies.bevy]
workspace = true
features = [
  "bevy_ci_testing",
  "bevy_state",
  "bevy_window"
]

[dev-dependencies.bevy_input]
workspace = true

[dev-dependencies.avian3d]
workspace = true
